--- a/html/about.html
+++ b/html/about.html
@@ -1,38 +1,116 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Zaenur ismail Widyatmoko/001201900035/IT6</title>
-	<link rel="stylesheet" type="text/css" href="about.css">
+	<title>Muhammad Salman Burhanuddin/01220190034/IS4</title>
+	<link rel="stylesheet" type="text/css" href="../css/about.css">
+	<style type="text/css">
+		p{
+			text-align: left;
+			font-family: sans-serif;
+		}
+
+		body{
+			background-color: antiquewhite;
+		}
+
+		a{
+			text-decoration: none;
+			color: #000;
+			border: ;
+			text-transform: 0.6s;		
+		}
+
+		.right{
+			background-color: antiquewhite;
+			float: left;
+			width: 24.75%;
+			border: 1px solid #000;
+		}
+
+		.incontent{
+			float: left;
+			width: 33.3%;
+			background-color: white;
+			width: 50%;
+			border: ;
+
+		}
+
+		.left{
+			float: left;
+			width: 25%;
+			background-color: gray;
+			height: 500px;
+			border: ;
+		}
+
+		.footer{
+			clear: left;
+			width: 50%;
+			border: ;
+			text-align: center;
+			letter-spacing: 2px;
+			background-color: gray;
+			margin: auto;
+		}
+
+		.header1{
+			line-height: 150px;
+		}
+
+		.header{
+			border: ;
+			width: 99.8%;
+			line-height: 70px;
+			height: 70px;
+		}
+
+		.content{
+			margin: 0;
+		}
+
+	</style>
 </head>
 <body>
-	<center><div class="header1"><h1>Gaming BLOG</h1></div></center>
-	<br>
-	<div class="header">
+	<center><div class="header1"><h1>NEWS WEBSITE</h1></div>
+		<div class="header">
 		<a href="file:///D:/Quis/home.html">Home</a>
 		<a href="file:///D:/Quis/login.html">login</a>
 		<a href="file:///D:/Quis/about1.html">About</a>
 		<a href="file:///D:/Quis/contak.html">Contact us</a>
 	</div>
-	<hr size="1px">
-	<br>
-	<br>
-
+	</center>
 	<div class="content">
+		<div class="left">
+			<img src="../img/politc.jpg" width="300px" height="300px">
+		<p><a href="file:///E:/html%20senin/html/about1.html">More about ASEAN NEWS . . .</a></p>			
+	</div>
+	<div class="incontent">
 		<ul class="gallery1">
-		 <li>
-			<img src="evos.jpg" alt="Mobile legend" class="galleryml1">
-			<span>Mobile legend</span>
-		</a>
-		 </li>
-		Mewakili Indonesia, Donkey, Oura, Wann, Luminaire, dan Vinss bermain apik dalam turnamen Mobile Legends World Championship (M1) 2019 yang digelar di Kuala Lumpur, Malaysia.
+			<img src="../img/world.jpg" alt="Mobile legend" class="galleryml1">
+		</ul>
+		
+			<h1>World News</h1>
+		<p>World news or international news or even foreign coverage is the news media jargon for news from abroad, about a country or a global subject. For journalism, it is a branch that deals with news either sent by foreign correspondents or news agencies, or – more recently – information that is gathered or researched through distance communication technologies, such as telephone, satellite TV or the internet.</p>
 
-Kembali dipertemukan dengan RRQ, EVOS Esports sukses mengalahkan RRQ dalam 7 pertandingan dengan skor ketat 4-3 pada Minggu (17/11/2019).
+		<p>Although in most of the English-speaking world this field is not usually regarded as a specific specialization for journalists, it is so in nearly all the world. Particularly in the United States, there is a blurred distinction between world news and "national" news when they include directly the national government or national institutions, such as wars in which the US are involved or summits of multilateral organizations in which the US are a member.</p>
 
-Sebelumnya dalam gelaran MPL Season 4 di Indonesia, dua tim terbesar di Indonesia ini juga sempat bertanding sengit. Laga ini bahkan disebut sebagai el clasico karena telah mempertemukan EVOS Esports dan RRQ.
+		<p>At the birth of modern journalism, most news were foreign, as registered by the courants of the 17th century in West and Central Europe, such as the Daily Courant (England), the Nieuwe Tijudinger (Antwerp), the Relation (Strasbourg), the Avisa Relation oder Zeitung (Wolfenbüttel) and the Courante Uyt Italien, Duytsland & C. (Amsterdam). Since these papers were aimed at bankers and merchants, they brought mostly news from other markets, which usually meant other nations. In any case, it is worthy to remark that nation-states were still incipient in 17th-century Europe.</p>
+
+		<p>From the 19th century on, with newspapers already established in Europe, the United States and a few other countries, innovations in telecommunications such as the telegraph made news from abroad easier to be spread. The first news agencies were then founded, like AFP (France), Reuters (UK), Wolff (currently DPA, Germany) and the AP (US).</p>
+
+		<p>War journalism is one of the best known subfields of world news (although war coverage can be national for the media of belligerent countries themselves). </p>
+
+	</div>
+	
+	</div>
 	</div>
 
 	<div class="footer">
-		
+		<a href="file:///D:/Quis/home.html">Wikipedia</a>
+		<a href="file:///D:/Quis/login.html">Google</a>
+		<a href="file:///D:/Quis/about1.html">BBC</a>
+		<a href="file:///D:/Quis/contak.html">Twitter</a>
 	</div>
 </body>
 </html>
