--- a/html/basic.html
+++ b/html/basic.html
@@ -1,11 +1,84 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Zaenur ismail Widyatmoko/001201900035/IT6</title>
-	<link rel="stylesheet" type="text/css" href="basic.css">
+	<title>Effin Alfianto/001201900035/IS2</title>
+	<link rel="stylesheet" type="text/css" href="../css/basic.css">
+	<style type="text/css">
+		body{
+			background-color: antiquewhite;
+		}
+
+		h1{
+			font-size: 50px;
+		}
+		p{
+			text-align: left;
+			font-family: sans-serif;
+		}
+
+		body{
+			background-color: antiquewhite;
+		}
+
+		a{
+			text-decoration: none;
+			color: #000;
+			border: ;
+			text-transform: 0.6s;		
+		}
+
+		.right{
+			background-color: antiquewhite;
+			float: left;
+			width: 24.75%;
+			border: 1px solid #000;
+		}
+
+		.incontent{
+			float: left;
+			width: 33.3%;
+			background-color: white;
+			width: 50%;
+			border: ;
+
+		}
+
+		.left{
+			float: left;
+			width: 25%;
+			background-color: gray;
+			height: 500px;
+			border: ;
+		}
+
+		.footer{
+			clear: left;
+			width: 50%;
+			border: ;
+			text-align: center;
+			letter-spacing: 2px;
+			background-color: gray;
+			margin: auto;
+		}
+
+		.header1{
+			line-height: 150px;
+		}
+
+		.header{
+			border: ;
+			width: 99.8%;
+			line-height: 70px;
+			height: 70px;
+		}
+
+		.content{
+			margin: 0;
+		}
+	</style>
 </head>
 <body>
-	<center><div class="header1"><h1>Gaming BLOG</h1></div></center>
+	<center><div class="header1"><h1>News Website</h1></div></center>
 	<br>
 	<div class="header">
 		<a href="file:///D:/Quis/home.html">Home</a>
@@ -13,16 +86,29 @@
 		<a href="file:///D:/Quis/about1.html">About</a>
 		<a href="file:///D:/Quis/contak.html">Contact us</a>
 	</div>
-	<hr size="1px">
-	<br>
-	<br>
 
+ 
 	<div class="content">
+		<h1>this is the basic HTML</h1>
+		<div class="content">
+		<div class="left">
+			<p>more picture if you need</p>
+		<p><a href="file:///E:/html%20senin/html/about1.html">THIS IS FOR THE HYPERLINK . . .</a></p>			
+	</div>
+	<div class="incontent">
+		<ul class="gallery1">
+			<p>this is for the picture</p>
+		</ul>
 		
+			<h1>THIS IS FOR THE CONTENT</h1>
+		]
+	</div>
+	
+	</div>
 	</div>
 
 	<div class="footer">
-		
+		this is for the menu footer
 	</div>
 </body>
 </html>
