--- a/html/home.html
+++ b/html/home.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Zaenur ismail Widyatmoko/001201900035/IT6</title>
+	
+	<title>Haniyah Putri Fajri Sanni - 012201900020</title>
 	<link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
-	<center><div class="header1"><h1>Gaming BLOG</h1></div></center>
+	<center><div class="header1" style="background-color: darkolivegreen; color: whitesmoke;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+		<h1>INDONESIAN NEWS</h1>
+			</div></center>
 	<br>
-	<div class="header">
-		<a href="file:///D:/Quis/home.html">Home</a>
-		<a href="file:///D:/Quis/login.html">login</a>
-		<a href="file:///D:/Quis/about1.html">About</a>
-		<a href="file:///D:/Quis/contak.html">Contact us</a>
+	<div class="header" >
+		<a href="home.html">Home</a> &nbsp;||&nbsp;
+		<a href="login.html">Login</a>&nbsp;||&nbsp;
+		<a href="about.html">About</a> &nbsp;||&nbsp;
+		<a href="contact.html">Contact us</a>
 	</div>
 	<hr size="1px">
 	<br>
@@ -20,16 +23,16 @@
 	<div class="content">
 		<ul class="gallery">
 		 <li>
-			<a href="file:///D:/Quis/about.html">
-			<img src="ml1.jpg" alt="Mobile legend" class="galleryml">
-			<span>Mobile legend</span>
+			<a href="about.html">
+			<img src="worldnews.jpg" alt="World News" class="News">
+			<span>WORLD NEWS</span>
 		</a>
 		 </li>
 
 		 	 <li>
-			<a href="file:///D:/Quis/about1.html">
-			<img src="pubg.jpg" alt="Player unknow battleground" class="gallerypubg">
-			<span>Player unknow battleground</span>
+			<a href="about1.html">
+			<img src="asean.jpg" alt="News" class="News">
+			<span>ASEAN NEWS</span>
 		</a>
 		 </li>
 
