--- a/html/contak.html
+++ b/html/contak.html
@@ -3,9 +3,21 @@
 <head>
 	<title>Zaenur ismail Widyatmoko/001201900035/IT6</title>
 	<link rel="stylesheet" type="text/css" href="contak.css">
+    <tittle>Annisa Nursakia/001201900008</tittle>
 </head>
 <body>
-	<center><div class="header1"><h1>Gaming BLOG</h1></div></center>
+    <style>
+        body{
+        background-image:
+        url(yeyeeee.jpg)
+        }
+           h1{
+            color:black;
+            text-align:center;
+        }
+    </style>
+    
+	<center><div class="header1"><style color-white></style><h1>Political news</h1></div></center>
 	<br>
 	<div class="header">
 		<a href="file:///D:/Quis/home.html">Home</a>
@@ -18,31 +30,29 @@
 	<br>
 
 	<div class="content">
-	<table style="width:550px;border:0;" cellpadding="8" cellspacing="0">
+<table style="width:600px;border:0;" cellpadding="8" cellspacing="0">
 <tr> <td>
-<label for="Name">Name*:</label>
-</td> <td>
-<input  name="Name" type="text" maxlength="60" />
-</td> </tr> <tr> <td>
-<label for="PhoneNumber">Phone number:</label>
+<h3 label for="Name">Name*:<h/1>
+ <td>
+<input  name="Name" type="text" maxlength="80" />
+</td>  <tr> <td>
+<h3 label for="PhoneNumber">Phone number*:</h3>
 </td> <td>
 <input  name="PhoneNumber" type="text" maxlength="43" />
 </td> </tr> <tr> <td>
-<label for="FromEmailAddress">Email address*:</label>
+<h3 label for="FromEmailAddress">Email address*:</h3>
 </td> <td>
-<input  name="FromEmailAddress" type="text" maxlength="90" />
+<input name="FromEmailAddress" type="text" maxlength="90" />
 </td> </tr> <tr> <td>
-<label for="Comments">Comments*:</label>
+<h3 label for="Comments">Comments*:</h3>
 </td> <td>
 <textarea name="Comments" rows="7" cols="40" style="width:350px;"></textarea>
-</td> </tr> <tr> <td>
-* - required fields
-</td> <td>
-<div style="float:right"><a href="https://www.100forms.com" id="lnk100" title="form to email">form to email</a></div>
+</td> </tr> <h3><tr> <td>
+ - *required fields
+    </td> <td>
+<div style="float:right"><h3><a href="https://www.100forms.com" id="lnk100" title="form to email">form to email</a></h3></div>
 <input name="skip_Submit" type="submit" value="Submit" />
 </td> </tr>
-</table>
-	</div>
 
 	<div class="footer">
 		
