--- a/html/login.html
+++ b/html/login.html
@@ -2,8 +2,19 @@
 <head>
     <title>Login page</title>
     <link rel="stylesheet" type="text/css" href="login.css">
+
+    
 <body>
-    <center><div class="header2"><h1>Gaming BLOG</b></h1></div></center>
+    <style> 
+        body{
+            background-image: url(5.jpg)
+        }
+            h1{
+                color:black;
+                text-align: center;
+            }
+    </style>
+    <center><div class="header2"><h1>Political News BLOG</b></h1></div></center>
     <br>
     <div class="file">
         <a href="file:///D:/Quis/home.html">Home</a>
@@ -13,11 +24,11 @@
     <br>
     <br>
     <div class="loginbox">
-        <h1 style="color: red"><ins>LOGIN HERE</ins></h1>
+        <h1 style="color: yellow"><ins>LOGIN HERE</ins></h1>
         <form>
-        <p style="color:red">Username</p>
+        <p style="color:yellow">Username</p>
         <input type="text" name="" placeholder="Enter Username">
-        <p style="color:red">Password</p>
+        <p style="color:yellow">Password</p>
         <input type="password" name="" placeholder="Enter Password">
         <input type="submit" name="" value="Login"><br>
         <a href="#">Lost your password?</a><br>
