--- a/html/about1.html
+++ b/html/about1.html
@@ -33,21 +33,46 @@
 			background-color: gray;
 		}
 
+		@media only screen and (max-width:800px) {
+  /* For mobile phones: */
+  		.incontent,.footer {
+  		  width:100%;
+  		}
+
+  		@media only screen and (max-width: 800px){
+  			.header1,.header{
+  				width: 100%;
+  			}
+  		}
+
+  		@media only screen and (max-width:800px) {
+  /* For mobile phones: */
+  		.gallery1 img {
+  		  width:200px;
+  		  height: auto;
+  		  float: left;
+  	}
+
+
 	</style>
 </head>
 <body>
 	<center><div class="header1"><h1>NEWS WEBSITE</h1></div></center>
 	<br>
 	<div class="header">
-		<a href="file:///D:/Quis/home.html">Home</a>
-		<a href="file:///D:/Quis/login.html">login</a>
-		<a href="file:///D:/Quis/about1.html">About</a>
-		<a href="file:///D:/Quis/contak.html">Contact us</a>
+		<a href="file:///E:/html%20senin/html/home.html">Home</a> &nbsp;||&nbsp;
+        <a href="file:///E:/html%20senin/html/login.html">Login</a>&nbsp;||&nbsp;
+        <a href="file:///E:/html%20senin/html/about.html">About</a> &nbsp;||&nbsp;
+        <a href="file:///E:/html%20senin/html/contak.html">Contact us</a>
 	</div>
 	<div class="content">
 		<div class="incontent">
 			<ul class="gallery1">
 			<img src="../img/ASEAN.JPG" alt="PUBG" class="galleryml1">
+			<br>
+			<br>
+			<br>
+			<br>	
 			<h1>ASEAN NEWS</h1>
 		</ul>
 		ESTABLISHMENT
