--- a/html/about.html
+++ b/html/about.html
@@ -108,10 +108,10 @@
 <body>
 	<center><div class="header1"><h1>NEWS WEBSITE</h1></div>
 		<div class="header">
-		<a href="file:///D:/Quis/home.html">Home</a>
-		<a href="file:///D:/Quis/login.html">login</a>
-		<a href="file:///D:/Quis/about1.html">About</a>
-		<a href="file:///D:/Quis/contak.html">Contact us</a>
+		<a href="file:///E:/html%20senin/html/home.html">Home</a> &nbsp;||&nbsp;
+        <a href="file:///E:/html%20senin/html/login.html">Login</a>&nbsp;||&nbsp;
+        <a href="file:///E:/html%20senin/html/about.html">About</a> &nbsp;||&nbsp;
+        <a href="file:///E:/html%20senin/html/contak.html">Contact us</a>
 	</div>
 	</center>
 	<div class="content">
