--- a/html/about.html
+++ b/html/about.html
@@ -61,6 +61,7 @@
 
 		.header1{
 			line-height: 150px;
+			background-color: purple;
 		}
 
 		.header{
@@ -100,6 +101,12 @@
 		@media only screen and (max-width: 620px) {
 			.left, .incontent, .right, .footer{
 				width: 100%;
+			}
+		}
+
+		@media only screen and (max-width: 620px){
+			.header{
+				font-size: 15px;
 			}
 		}
 
