--- a/html/about1.html
+++ b/html/about1.html
@@ -54,6 +54,12 @@
   	}
 
 
+  		@media only screen and (max-width: 568px){
+  			.header{
+  				font-size: 2px;
+  			}
+  		}
+
 	</style>
 </head>
 <body>
