--- a/html/basic.html
+++ b/html/basic.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Effin Alfianto/001201900035/IS2</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../css/basic.css">
 	<style type="text/css">
 		body{
@@ -75,16 +77,29 @@
 		.content{
 			margin: 0;
 		}
+
+		@media only screen and (max-width: 800px) {
+			.left, .incontent, .right, .footer{
+				width: 100%;
+			}
+		}
+
+		@media only screen and (max-width: 667px){
+			.header{
+				font-size: 15px;
+			}
+		}
+
 	</style>
 </head>
 <body>
 	<center><div class="header1"><h1>News Website</h1></div></center>
 	<br>
 	<div class="header">
-		<a href="file:///D:/Quis/home.html">Home</a>
-		<a href="file:///D:/Quis/login.html">login</a>
-		<a href="file:///D:/Quis/about1.html">About</a>
-		<a href="file:///D:/Quis/contak.html">Contact us</a>
+		<a href="file:///E:/html%20senin/html/home.html">Home</a> &nbsp;||&nbsp;
+        <a href="file:///E:/html%20senin/html/login.html">Login</a>&nbsp;||&nbsp;
+        <a href="file:///E:/html%20senin/html/about.html">About</a> &nbsp;||&nbsp;
+        <a href="file:///E:/html%20senin/html/contak.html">Contact us</a>
 	</div>
 
  
