--- a/html/about.html
+++ b/html/about.html
@@ -115,10 +115,10 @@
 <body>
 	<center><div class="header1"><h1>NEWS WEBSITE</h1></div>
 		<div class="header">
-		<a href="file:///E:/html%20senin/html/home.html">Home</a> &nbsp;||&nbsp;
-        <a href="file:///E:/html%20senin/html/login.html">Login</a>&nbsp;||&nbsp;
-        <a href="file:///E:/html%20senin/html/about.html">About</a> &nbsp;||&nbsp;
-        <a href="file:///E:/html%20senin/html/contak.html">Contact us</a>
+		<a href="../html/home.html">Home</a> &nbsp;||&nbsp;
+        <a href="../html/login.html">Login</a>&nbsp;||&nbsp;
+        <a href="../html/about.html">About</a> &nbsp;||&nbsp;
+        <a href="../html/contak.html">Contact us</a>
 	</div>
 	</center>
 	<div class="content">
