--- a/html/about1.html
+++ b/html/about1.html
@@ -66,10 +66,10 @@
 	<center><div class="header1"><h1>NEWS WEBSITE</h1></div></center>
 	<br>
 	<div class="header">
-		<a href="file:///E:/html%20senin/html/home.html">Home</a> &nbsp;||&nbsp;
-        <a href="file:///E:/html%20senin/html/login.html">Login</a>&nbsp;||&nbsp;
-        <a href="file:///E:/html%20senin/html/about.html">About</a> &nbsp;||&nbsp;
-        <a href="file:///E:/html%20senin/html/contak.html">Contact us</a>
+		<a href="../html/home.html">Home</a> &nbsp;||&nbsp;
+        <a href="../html/login.html">Login</a>&nbsp;||&nbsp;
+        <a href="../html/about.html">About</a> &nbsp;||&nbsp;
+        <a href="../html/contak.html">Contact us</a>
 	</div>
 	<div class="content">
 		<div class="incontent">
@@ -140,10 +140,10 @@
 		</div>
 	</div>
 	<div class="footer">
-		<a href="file:///D:/Quis/home.html">Wikipedia</a>
-		<a href="file:///D:/Quis/login.html">Google</a>
-		<a href="file:///D:/Quis/about1.html">BBC</a>
-		<a href="file:///D:/Quis/contak.html">Twitter</a>
+		<a href="wikipedia.com">Wikipedia</a>
+		<a href="google.com">Google</a>
+		<a href="bbc.com">BBC</a>
+		<a href="twitter.com">Twitter</a>
 	</div>
 </body>
 </html>
