--- a/html/basic.html
+++ b/html/basic.html
@@ -96,10 +96,10 @@
 	<center><div class="header1"><h1>News Website</h1></div></center>
 	<br>
 	<div class="header">
-		<a href="file:///E:/html%20senin/html/home.html">Home</a> &nbsp;||&nbsp;
-        <a href="file:///E:/html%20senin/html/login.html">Login</a>&nbsp;||&nbsp;
-        <a href="file:///E:/html%20senin/html/about.html">About</a> &nbsp;||&nbsp;
-        <a href="file:///E:/html%20senin/html/contak.html">Contact us</a>
+		<a href="../html/home.html">Home</a> &nbsp;||&nbsp;
+        <a href="../html/login.html">Login</a>&nbsp;||&nbsp;
+        <a href="../html/about.html">About</a> &nbsp;||&nbsp;
+        <a href="../html/contak.html">Contact us</a>
 	</div>
 
  
@@ -108,7 +108,7 @@
 		<div class="content">
 		<div class="left">
 			<p>more picture if you need</p>
-		<p><a href="file:///E:/html%20senin/html/about1.html">THIS IS FOR THE HYPERLINK . . .</a></p>			
+		<p><a href="../html/about1.html">THIS IS FOR THE HYPERLINK . . .</a></p>			
 	</div>
 	<div class="incontent">
 		<ul class="gallery1">
