--- a/html/home.html
+++ b/html/home.html
@@ -117,16 +117,16 @@
 
 	<div class="content">
 		<ul class="gallery">
-		 <li>
-			<a href="about.html">
-			<img src="../img/worldnews.jpg" alt="World News" class="News">
+		 <li class="gallerypubg">
+			<a href="../html/about.html">
+			<img src="../img/world.jpg" alt="World News" class="gallerypubg">
 			<span>WORLD NEWS</span>
 		</a>
 		 </li>
 
-		 	 <li>
-			<a href="about1.html">
-			<img src="../img/asean.jpg" alt="News" class="News">
+		 	 <li class="gallerypubg">
+			<a href="../html/about1.html">
+			<img src="../img/asean.jpg" alt="News" class="gallerypubg">
 			<span>ASEAN NEWS</span>
 		</a>
 		 </li>
