--- a/html/about.html
+++ b/html/about.html
@@ -124,7 +124,7 @@
 	<div class="content">
 		<div class="left">
 			<img src="../img/politc.jpg" width="300px" height="300px">
-		<p><a href="file:///E:/html%20senin/html/about1.html">More about ASEAN NEWS . . .</a></p>			
+		<p><a href="../html/about1.html">More about ASEAN NEWS . . .</a></p>			
 	</div>
 	<div class="incontent">
 		<ul class="gallery1">
