--- a/html/about.html
+++ b/html/about.html
@@ -5,126 +5,36 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../css/about.css">
-	<style type="text/css">
-		*{
-			box-sizing: border-box;
-		}
-
-		p{
-			text-align: left;
-			font-family: sans-serif;
-		}
-
-		body{
-			background-color: antiquewhite;
-		}
-
-		a{
-			text-decoration: none;
-			color: #000;
-			border: ;
-			text-transform: 0.6s;		
-		}
-
-		.right{
-			background-color: antiquewhite;
-			float: left;
-			width: 24.75%;
-			border: 1px solid #000;
-		}
-
-		.incontent{
-			float: left;
-			background-color: white;
-			width: 50%;
-			border: ;
-
-		}
-
-		.left{
-			float: left;
-			width: 25%;
-			background-color: gray;
-			height: 500px;
-			border: ;
-		}
-
-		.footer{
-			clear: left;
-			width: 50%;
-			border: ;
-			text-align: center;
-			letter-spacing: 2px;
-			background-color: gray;
-			margin: auto;
-		}
-
-		.header1{
-			line-height: 150px;
-			background-color: purple;
-		}
-
-		.header{
-			border: ;
-			width: 99.8%;
-			line-height: 70px;
-			height: 70px;
-		}
-
-		.content{
-			margin: 0;
-		}
-
-		@media only screen and (max-width:800px) {
-  /* For mobile phones: */
-  		.left, .incontent, .right, .footer {
-  		  width:100%;
-  	}
-
-		@media only screen and (max-width: 800px){
-  		.left img{
-  			text-align: center;
-  			width: 250px;
-  		}
-
-  	}
-
-  		@media only screen and (max-width:800px) {
-  		/* For mobile phones: */
-  		.galleryml1 {
-    	width:100%;
-    	height: auto;
-    	text-align: center;
-  		}
-	}
-
-		@media only screen and (max-width: 620px) {
-			.left, .incontent, .right, .footer{
-				width: 100%;
-			}
-		}
-
-		@media only screen and (max-width: 620px){
-			.header{
-				font-size: 15px;
-			}
-		}
-
-	</style>
 </head>
 <body>
-	<center><div class="header1"><h1>NEWS WEBSITE</h1></div>
-		<div class="header">
-		<a href="../html/home.html">Home</a> &nbsp;||&nbsp;
-        <a href="../html/login.html">Login</a>&nbsp;||&nbsp;
-        <a href="../html/about.html">About</a> &nbsp;||&nbsp;
-        <a href="../html/contak.html">Contact us</a>
+	<center><div class="header1"><h1>NEWS WEBSITE</h1>
 	</div>
+		<div class="header">
+		<a href="../html/home.html" class="btn">Home</a> &nbsp;||&nbsp;
+        <a href="../html/login.html" class="btn">Login</a>&nbsp;||&nbsp;
+        <a href="../html/about.html" class="btn">About</a> &nbsp;||&nbsp;
+        <a href="../html/contak.html" class="btn">Contact us</a>
+		</div>
 	</center>
 	<div class="content">
 		<div class="left">
-			<img src="../img/politc.jpg" width="300px" height="300px">
-		<p><a href="../html/about1.html">More about ASEAN NEWS . . .</a></p>			
+			<img src="../img/aseansmall.jpg" width="300px" height="300px">
+		<p>We also provide the news from asia, so if you want to know easier about asean news you just need to go to the asean news, and don't need troublesome to see the new of the asean news every day</p>	
+
+		<div class="container">
+			<div class="cb">
+				<img src="../img/fhiliphines.jpg">
+				<div class="isi">
+				<p>ASEAN GAMES Has ended with successfully
+				   fhiliphines President give speech up to the another country and say thanks for the support asean games.</p></div>
+			</div>
+		</div>
+
+		<p>Wanna go to the Asean News Page?</p>
+		<p>Go back to the home page ~</p>
+		<div class="hyperlink">
+		<a href="../html/home.html">Click Here...</a>	
+		</div>
 	</div>
 	<div class="incontent">
 		<ul class="gallery1">
@@ -147,13 +57,48 @@
 		<p>War journalism is one of the best known subfields of world news (although war coverage can be national for the media of belligerent countries themselves). </p>
 
 	</div>
-	</div>
+	<div class="right">
+		<h2>What we do</h2>
+		<p>Provide the Politic News in the world</p>
+		<p>And also give the detail information about the another news, which are : <br></p>
+		<div class="inright">
+		<h4>1. Sports </h4>
+		   <img src="../img/sports.png">
+		   <p>Volley,Basket,Football & Life Healthy,</p>
+		</div>
+		<div class="inright">
+		   <h4>2. Fashion</h4>
+		   <img src="../img/fashion.jpg">
+		   <p>Clothes,Trend,Hybeast</p></div>
+		<div class="inright">
+		   <img src="../img/travelling.png">
+		<h4>3. Traveling</h4>
+		   <p>Out Country,Destination,Culture</p></div>
 	</div>
 	<div class="footer">
-		<a href="file:///D:/Quis/home.html">Wikipedia</a>
-		<a href="file:///D:/Quis/login.html">Google</a>
-		<a href="file:///D:/Quis/about1.html">BBC</a>
-		<a href="file:///D:/Quis/contak.html">Twitter</a>
+		<div class="fottit">
+			<h3>OUR PARTNER POLITIC NEWS UPDATE </h3>
+		</div>
+		<div class="boxcontainer">
+		<div class="box">
+			<img src="../img/wikipedia.jpg">
+			<h3><a href="www.wikipedia.com">Wikipedia </a></h3>
+			<p>Provide you the news world update. wikipedia also 	provide the meaning of word that maybe you can't 	   understand or don't know</p>
+		</div>
+		<div class="box">
+			<img src="../img/bbcs.jpg">
+			<h3><a href="www.bbc.com">BBC </a></h3>
+			<p>The BBC is the alternative if you want to more speed update news about the politic everyday</p>
+		</div>
+		<div class="box">
+			<img src="../img/twitter.png">
+			<h3><a href="www.twitter.com">Twitter</a></h3>
+			<p>Twiter user will share the news politic from our sites to the twitter so you can check your twitter</p>
+		</div>
+		</div>	
+		<div class="copyright">
+		<p>POLITIC NEWS (Copyright @2020)</p>
 	</div>
+</div>
 </body>
 </html>
