--- a/html/contak.html
+++ b/html/contak.html
@@ -1,20 +1,19 @@
 <html>
 <head>
    <title>AnnisaNursakia/012201900008</title>
-	<link rel="stylesheet" type="text/css" href="csskontakkk.css">
+	<link rel="stylesheet" type="text/css" href="../css/contak.css">
     <meta name="viewport" content="width=device,initial=scale=1">
  
 </head>
 <body>
-    <center><div class="header1"><h1>NEWS WEBSITE</h1></div></center>
-    <center>
+  <center><div class="header1"><h1>NEWS WEBSITE</h1>
+	</div>
 		<div class="header">
-		<a href="../html/home.html">Home</a> &nbsp;||&nbsp;
-        <a href="../html/login.html">Login</a>&nbsp;||&nbsp;
-        <a href="../html/about.html">About</a> &nbsp;||&nbsp;
-        <a href="../html/contak.html">Contact us</a>
-		</div>
-    </center>
+		<a href="../html/home.html" class="btn">Home</a> &nbsp;||&nbsp;
+        <a href="../html/login.html" class="btn">Login</a>&nbsp;||&nbsp;
+        <a href="../html/about.html" class="btn">About</a> &nbsp;||&nbsp;
+        <a href="../html/contak.html" class="btn">Contact us</a>
+		</div></center>
 	<br>
             <fieldset>
             <legend>Contact Information</legend>
