--- a/html/login.html
+++ b/html/login.html
@@ -1,15 +1,15 @@
 <html>
 <head>
     <title>Login page</title>
-    <link rel="stylesheet" type="text/css" href="login.css">
+    <link rel="stylesheet" type="text/css" href="../css/login.css">
 
     
 <body>
     
-    <center><div class="header2"><h1>Political News BLOG</b></h1></div></center>
+    <center><div class="header2"><a href="../html/home.html"><h1 style="color: white;">NEWS WEBSITE</b></h1 s></a></div></center>
     <br>
     <div class="file">
-        <a href="file:///D:/Quis/home.html">Home</a>
+        <a href="file:///D:/Q">Home</a>
         <a href="file:///D:/Quis/login.html">login</a>
         <a href="file:///D:/Quis/about1.html">About</a>
         <a href="file:///D:/Quis/contak.html">Contact us</a>
