--- a/html/news1.html
+++ b/html/news1.html
@@ -2,75 +2,17 @@
 <html>
 <head>
 	<title>Haniyah Putri Fajri Sanni - 012201900020</title>
-	<link rel="stylesheet" type="text/css" href="../css/about1.css">
-	<style type="text/css">
-		p{
-			text-align: left;
-			font-family: sans-serif;
-		}
-		
-		body{
-			background-color: antiquewhite;
-		}
-
-		a{
-			text-decoration: none;
-			color: black;
-		}
-
-		.incontent{
-			margin: 0 auto;
-			width: 50%;
-			background-color: #fff;
-		}
-
-		.footer{
-			clear: left;
-			width: 50%;
-			text-align: center;
-			margin: 0 auto;
-			letter-spacing: 2px;
-			background-color: gray;
-		}
-
-		@media only screen and (max-width:800px) {
-  /* For mobile phones: */
-  		.incontent,.footer {
-  		  width:100%;
-  		}
-
-  		@media only screen and (max-width: 800px){
-  			.header1,.header{
-  				width: 100%;
-  			}
-  		}
-
-  		@media only screen and (max-width:800px) {
-  /* For mobile phones: */
-  		.gallery1 img {
-  		  width:200px;
-  		  height: auto;
-  		  float: left;
-  	}
-
-
-  		@media only screen and (max-width: 568px){
-  			.header{
-  				font-size: 2px;
-  			}
-  		}
-
-	</style>
+	<link rel="stylesheet" type="text/css" href="../css/news.css">
 </head>
 <body>
-	<center><div class="header1"><h1>NEWS WEBSITE</h1></div></center>
-	<br>
-	<div class="header">
-		<a href="../html/home.html">Home</a> &nbsp;||&nbsp;
-        <a href="../html/login.html">Login</a>&nbsp;||&nbsp;
-        <a href="../html/about.html">About</a> &nbsp;||&nbsp;
-        <a href="../html/contak.html">Contact us</a>
+	<center><div class="header1"><h1>NEWS WEBSITE</h1>
 	</div>
+		<div class="header">
+		<a href="../html/home.html" class="btn">Home</a> &nbsp;||&nbsp;
+        <a href="../html/login.html" class="btn">Login</a>&nbsp;||&nbsp;
+        <a href="../html/about.html" class="btn">About</a> &nbsp;||&nbsp;
+        <a href="../html/contak.html" class="btn">Contact us</a>
+		</div>
 	<div class="content" style="background-color: antiquewhite;">
 		<div class="incontent" style="background-color: antiquewhite;>
             <ul class="gallery1">
